Fix treebeard icon alignment [skip ci]

--- a/website/static/css/fangorn.css
+++ b/website/static/css/fangorn.css
@@ -10,10 +10,6 @@ color: #F00;
 text-align: center;
 }
 
-.tb-row span {
-    vertical-align: middle;
-}
-
 .tb-head {
 	background: #EFEFEF;
   margin: 0 0 5px 0;
